PUB-1738 Remove code smells (#243)
* remove code smells

* fix code smells in tests

* fix code review comment

Co-authored-by: ChrisS1512 <87066931+ChrisS1512@users.noreply.github.com>